@@ -108,14 +108,16 @@
  ((require 'image nil t)
   (defcustom mime-image-max-height nil
     "*Max displayed image height of attachment image to a message.
-It has effect only when imagemagick support is available."
+It has effect only when imagemagick or image scaling support is
+available."
     :group 'mime-view
     :type '(choice (const :tag "Use original size" nil)
 		   integer))
 
   (defcustom mime-image-max-width nil
     "*Max displayed image width of attachment image to a message.
-It has effect only when imagemagick support is available."
+It has effect only when imagemagick or image scaling support is
+available."
     :group 'mime-view
     :type '(choice (const :tag "Use original size" nil)
 		   integer))
@@ -123,13 +125,16 @@ It has effect only when imagemagick support is available."
   (defalias 'mime-image-type-available-p 'image-type-available-p)
   (defun mime-image-create
       (file-or-data &optional type data-p &rest props)
-    (let ((imagemagick
-	   (and (image-type-available-p 'imagemagick)
-		(fboundp 'imagemagick-filter-types)
-		(member (downcase (symbol-name type))
-			(mapcar (lambda (e) (downcase (symbol-name e)))
-				(imagemagick-filter-types)))
-		(or mime-image-max-height mime-image-max-width))))
+    (let* ((scale-p (and (fboundp 'image-scaling-p)
+			 (image-scaling-p)))
+	   (imagemagick
+	    (and (null scale-p)
+		 (image-type-available-p 'imagemagick)
+		 (fboundp 'imagemagick-filter-types)
+		 (member (downcase (symbol-name type))
+			 (mapcar (lambda (e) (downcase (symbol-name e)))
+				 (imagemagick-filter-types)))
+		 (or mime-image-max-height mime-image-max-width))))
       (cond
        (imagemagick
 	(apply #'create-image file-or-data 'imagemagick data-p
@@ -149,7 +154,14 @@ It has effect only when imagemagick support is available."
 			:height (nth 1 file-or-data))
 		  props))))
        (t
-	(apply #'create-image file-or-data type data-p props)))))
+	(apply #'create-image file-or-data type data-p
+	       (nconc (and scale-p
+			   mime-image-max-width
+			   `(:max-width ,mime-image-max-width))
+		      (and scale-p
+			   mime-image-max-height
+			   `(:max-heigh ,mime-image-max-height))
+		      props))))))
   (defalias 'mime-image-insert 'insert-image))
  (t
   (if (and (featurep 'mule) (require 'bitmap nil t))
